feat(mobile): tornar revisao da nova OS atomica
